# binary-search-trees

./: CMakeLists.txt  main.cpp
include/: avl.h  bst.h  scapegoat.h
src/: bst.cpp  scapegoat.cpp
